--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     background-color: rgb(18, 44, 129);
 }
 
-/*--------------Index-----------------*/
+/*--------------Index.html-----------------*/
 
 nav {
 
@@ -46,6 +46,32 @@ nav {
     margin-bottom: 10px;
 
 }
+
+/*--------------quienes.html-----------------*/
+
+main img {
+
+    border-radius: 10px;
+    width: 100%;
+
+}
+
+aside {
+
+    background-color: #000;
+    border-radius: 10px;
+    padding: 20px;
+
+}
+
+.space {
+
+    /* background-color: red; */
+    width: 100%;
+    height: 100px;
+
+}
+
 
 footer {
 
