--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ nav {
 }
 
 /*--------------quienes.html-----------------*/
+main, aside {
+
+    margin-bottom: 20px;
+
+}
 
 main img {
 
@@ -66,7 +71,6 @@ aside {
 
 .space {
 
-    /* background-color: red; */
     width: 100%;
     height: 100px;
 
@@ -83,5 +87,12 @@ footer  p {
 
     text-align: center;
     margin-bottom: 0px;
+
+}
+
+.raya {
+
+    border-bottom: 1px solid white;
+    margin-bottom: 20px;
 
 }
