changed index, quienes, formulario

--- a/style.css
+++ b/style.css
@@ -48,6 +48,13 @@ nav {
 }
 
 /*--------------quienes.html-----------------*/
+
+.qh3 {
+
+    text-align: center;
+
+}
+
 main, aside {
 
     margin-bottom: 20px;
