--- a/style.css
+++ b/style.css
@@ -47,6 +47,18 @@ nav {
 
 }
 
+.names {
+
+    font-size: 25px;
+
+}
+
+.box-names {
+
+    margin-bottom: 30px;
+
+}
+
 /*--------------quienes.html-----------------*/
 
 .qh3 {
