--- a/style.css
+++ b/style.css
@@ -166,3 +166,10 @@ footer  p {
     margin-bottom: 30px;
 
 }
+
+/*--------------clima.html-----------------*/ 
+
+.h22{
+    font-size: 30px;
+    text-align: center;
+}
